[package]
name = "rust_sandbox"
version = "0.1.0"
authors = ["Tom tlong00inc@gmail.com"]
edition = "2021"

# either src/lib.rs, src/main.rs, a [lib] section, or [[bin]] section must be present

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-web = "4.5.1"
# import only a specific feature from the serde crate
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
